--- a/hello.html
+++ b/hello.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <h1>Welcome</h1>
+    <h1 color:blue;>Welcome</h1>
     <h2>testing git pull</h2>
     Hello, world!
     Hello, world!
