--- a/hello.html
+++ b/hello.html
@@ -1,18 +1,12 @@
 <!DOCTYPE html>
 
 <html lang="en">
-<head>
-    <title></title>
-</head>
+    <head>
+        <title>Hello</title>
+    </head>
 
-<body>
-    <h1 style="color:blue;">Welcome</h1>
-    <h2>testing git pull</h2>
-    Hello, world!
-    Hello, world!
-    hjgljhglg
-    kajsdlkfjh
-</body>
-
+    <body>
+        Hello, world!
+    </body>
 
 </html>
